--- a/src/RailwayOrientedProgramming/Views/Person/CreateImperative.cshtml
+++ b/src/RailwayOrientedProgramming/Views/Person/CreateImperative.cshtml
@@ -1,16 +1,16 @@
 ﻿@model RailwayOrientedProgramming.Models.PersonModel
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "CreateImperative";
 }
 
-<h2>Create</h2>
+<h2>CreateImperative</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-
+    
     @Html.Partial("_Person", Model)
 }
 
